--- a/ga/alpharetta/assets/css/styles.css
+++ b/ga/alpharetta/assets/css/styles.css
@@ -1,417 +1,495 @@
-.mynav {
-  overflow: hidden;
-  padding: 20px 0 15px 0;
-  border-width: 0px;
-  background-color: #FFF;
-  box-shadow: 0px 0px 16px -6px #395c86;
+body {
+  font-family: 'Montserrat', sans-serif;
+  color: #333;
+  font-size: 14px;
+}
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Oswald', sans-serif;
+}
+.container {
+  max-width: 1210px;
+}
+.top-header {
+  background: #395c86;
+  padding: 14px 0;
+}
+.top-header p {
+  margin: 0;
+  text-align: center;
+  color: #fff;
+  font-size: 16px;
 }
 
-.mynav .navbrand {
-  float: left;
-  border-width: 0px;
-  border-color: transparent;
-  background-color: transparent !important;
+.navbar.navbar-light .container-fluid {
+  max-width: 1210px;
 }
 
-.mynav .right-nav {
-  float: right;
-  overflow: hidden;
+.navbar.navbar-light {
+  padding: 5px 0;
+  margin: 0;
+}
+
+.hero-banner-wrapper {
+  background: url('../../assets/img/hero-banner.jpg');
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  padding: 80px 0;
+}
+
+.hero-text-outer {
+  background: rgba(0,0,0,.5);
+  padding: 40px;
+  max-width: 680px;
+  margin: auto;
+}
+.navbar-light .navbar-nav .nav-link {
+  color: #000000;
+  font-size: 16px;
+  text-transform: uppercase;
+  font-weight: 500;
+  padding: 0 20px;
+}
+.hero-text-outer h1 {
+  color: #fff;
+  text-align: center;
+  font-size: 44px;
+  font-weight: 500;
+  line-height: 50px;
+  margin: 0;
+}
+
+img {
+  max-width: 100%;
+}
+
+.hero-tagline ul li {
+  display: inline-block;
+  vertical-align: middle;
+  padding: 0 20px;
+}
+
+.hero-tagline ul {
+  margin: 0;
+}
+
+.hero-tagline {
+  text-align: center;
+  margin-top: 40px;
+}
+
+.safe-comfortable-section {
+  padding: 50px 0 70px 0;
+  background: #F5EFE6;
+}
+
+.sunrise-state-map img {
   position: relative;
-  top: 25px;
-  padding: 0 15px;
 }
 
-.mynav .right-nav p {
-  float: left;
-  color: #555555;
-  text-align: right;
+h2.section-title {
+  text-align: center;
+  font-size: 36px;
+  color: #000000;
+  font-weight: 500;
+  margin: 0 0 40px 0;
+}
+
+.safe-comfortable-section .sub-title {
+  text-align: center;
+  margin: 0 0 30px;
   font-size: 20px;
-  line-height: 24px;
-  font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
-  margin-bottom: 0;
-  padding-right: 25px;
+  color: #395c86;
+  font-weight: normal;
+  font-family: 'Montserrat', sans-serif;
 }
 
-.mynav .badge-img {
+.facility-outer .title br {
+  display: none;
+}
+
+.facility-outer .title {
+  font-size: 24px;
+  color: #000;
+  font-family: 'Oswald', sans-serif;
+  font-weight: 500;
+  display: inline-block;
+  margin-bottom: 20px;
+}
+
+.facility-inner br {
+  display: none;
+}
+
+.facility-inner .table-responsive {
+  overflow-x: inherit;
+}
+
+.safe-comfortable-section .section-title {
+  margin-bottom: 13px;
+}
+
+.our-client-section {
+  padding: 50px 0;
+}
+
+.our-client-inner img {
+  max-height: 110px;
+}
+
+.our-client-inner {
+  display: flex;
+  height: 140px;
+  align-items: center;
+  justify-content: center;
+  box-shadow: -1px 5px 10px rgba(0,0,0,0.10);
+  border: 1px solid rgba(0,0,0,0.10);
+}
+
+.testimonial-section {
+  background: #395c86;
+  padding: 50px 0;
+}
+
+.testimonial-section .section-title {
+  color: #fff;
+}
+
+.testimonial-inner p {
+  color: #fff;
+  font-style: italic;
+  font-size: 16px;
+  max-width: 1024px;
+  margin: 30px auto 20px;
+  line-height: 28px;
+}
+
+.testimonial-inner h5 {
+  color: #fff;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 22px;
+  margin: 0;
+}
+
+.testimonial-inner > img {
+  max-width: 85px;
+}
+
+.product-slider-section {
+  padding: 50px 0;
+  background: #395c86;
+}
+
+.why-sunrise-section {
+  padding: 50px 0;
+}
+
+.why-sunrise-point ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  margin-top: 60px;
+}
+
+.why-sunrise-point ul li strong {
+  font-weight: normal;
+}
+
+.why-sunrise-point ul li {
+  font-size: 18px;
+  position: relative;
+  padding: 0 0 15px 42px;
+}
+
+.why-sunrise-point ul li br {
+  display: none;
+}
+
+.why-sunrise-point ul li img {
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+
+.site-footer {
+  background: #222222;
+  padding: 50px 0;
+}
+
+header .navbar-toggler {
+  display: none !important;
+}
+
+.header-second {
+  background: #fff;
+  padding: 10px 0;
+}
+
+.header-brand-logo ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.header-brand-logo ul li {
+  display: inline-block;
+  padding-left: 15px;
+}
+
+.pull-left {
+  float: left;
+}
+
+.pull-right {
   float: right;
 }
 
-.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
-  border: 0;
-  background-color: transparent !important;
+.header-right-logo h5 {
+  font-size: 18px;
+  margin: 0;
+  padding-right: 10px;
+}
+
+.header-brand-logo ul li img {
+  max-width: 65px;
+}
+
+.header-right-logo {
+  margin-top: 10px;
+}
+
+.comfortable-map-outer {
+  position: relative;
+}
+
+.comfortable-map-timing ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.clearfix:after, .clearfix:before {
+  content: "";
+  display: table;
+}
+
+.clearfix:after {
+  clear: both;
+}
+
+.comfortable-map-timing br {
+  display: none;
+}
+
+.comfortable-map-timing ul li .col-4 {
   padding: 0;
 }
 
-.mynav .nav-link.active img {
-  max-width: 206px;
-  max-height: 85px;
+.comfortable-map-timing ul li p {
+  margin: 0;
 }
 
-.mynav .navbrand .nav-item {
-  background-color: transparent;
-  border: 0;
+.comfortable-map-timing {
+  padding-right: 5px;
+}
+
+.comfortable-map-timing h4 a {
+  color: #000;
+  margin: 20px 0;
+  display: inline-block;
+}
+
+.comfortable-map-timing h4 {
+  margin: 0;
+}
+
+.comfortable-map-timing ul li {
+  background: #fff;
+  border: 1px solid #ddd;
+  padding: 10px 0;
+  border-bottom: none;
+  margin: 0;
+}
+
+.comfortable-map-timing ul li:last-child {
+  border-bottom: 1px solid #ddd;
+}
+
+.product-slider-inner ul {
+  list-style: none;
   padding: 0;
+  margin: 0;
 }
 
-@media (min-width: 768px) {
-  .mynav .container {
-    padding: 0;
-    overflow: hidden;
-  }
+.product-slider-inner {
+  max-width: 940px;
+  margin: auto;
 }
 
-.mynav .right-nav span {
-  color: #555555;
-  text-align: right;
-  font-size: 30px;
-  line-height: 36px;
-  font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
-  font-weight: normal;
-  display: block;
-  padding-top: 5px;
+.flexslider {
+  margin: 0 0 20px 0;
+  border: none;
+  border-radius: 0;
 }
 
-@media (max-width: 710px) {
-  .mynav .navbrand {
-    float: none;
-    margin: 10px auto;
-    max-width: 310px;
-    text-align: center;
-  }
+.slider-thumbnail {
+  background: transparent;
+  margin: 0;
 }
 
-@media (max-width: 710px) {
-  .mynav .right-nav {
-    float: none;
-    top: 0;
-    margin-top: 10px;
-    max-width: 370px;
-    margin: 10px auto 0 auto;
-  }
+.slider-thumbnail .slides li {
+  border: 2px solid transparent;
+  cursor: pointer;
+  opacity: .8;
 }
 
-@media (max-width: 395px) {
-  .mynav .right-nav {
-    padding: 0;
-  }
+.slider-thumbnail .slides li.flex-active-slide {
+  border-color: #d3af1c;
+  opacity: 1;
 }
 
-@media (max-width: 395px) {
-  .mynav .right-nav p {
-    padding-right: 5px;
-  }
+.slider-thumbnail .slides li img {
+  min-height: 75px;
+  width: auto;
+  max-width: 100%;
+}
+.flex-direction-nav a {
+	font-size:0
+}
+.flex-direction-nav a:before{
+  background-image: url('../../assets/img/slider-arrow.png');
+  background-repeat: no-repeat;
+  background-position: center center;
+  height: 40px;
+  width: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: initial;
+  content: "";
+  background-size: 30px;
 }
 
-@media (max-width: 695px) {
-  .mynav {
-    padding: 5px 0 5px 2px;
-  }
+.site-footer p {
+  color: #fff;
+  margin: 25px 0 0 0;
 }
 
-.h1, h1 {
-  color: #2e2e2e;
+.flex-direction-nav a {
+  background: #d3af1c;
+}
+
+.flex-direction-nav a.flex-next:before, .flex-direction-nav a.flex-next:after {
+  content: "";
+}
+
+.flex-direction-nav .flex-next:before {
+  transform: rotate(180deg);
+}
+
+.flexslider:hover .flex-direction-nav .flex-prev, .flexslider:hover .flex-direction-nav .flex-next {
+  opacity: 1;
+}
+
+.marker-text {
+  cursor: pointer;
+}
+
+.map-outer-div.text-center {
+  margin-top: 45px;
+}
+
+.right-col.col-4.map-timing-col {
+  padding: 0 10px 0 0;
+}
+
+.map-outer-div.text-center.new-jersey-map {
+  margin: 0;
+}
+
+.sub-title.new-jersey-sub {
+  margin-bottom: 50px;
+}
+
+.map-timing-col {
+  -ms-flex: 0 0 30%;
+  flex: 0 0 30%;
+  max-width: 30%;
+}
+
+.map-middle-col.col-4 {
+  -ms-flex: 0 0 40%;
+  flex: 0 0 40%;
+  max-width: 40%;
+}
+#mobile-map-comfortable,
+#lg-download ,
+.lg-toolbar .lg-icon,
+#mobile-product-slider{
+	display:none;
+}
+.lg-toolbar span.lg-close.lg-icon {
+	display:block
+}
+#mobile-product-slider .flex-control-nav {
+    display: none;
+}
+.flexslider.products-slider1 {
+    margin: 0;
+}
+.error-page-outer {
+    margin-bottom: 40px;
+}
+.error-icon img {
+	max-width:100px;
+	margin:auto;
+}
+.error-icon {
+	margin-bottom:20px;
+}
+/*thank-you page*/
+.take-breath{
+  padding: 40px 0;
+  box-shadow: 1px 1px 1px 1px #CCC;
+}
+.take-breath .h1{
+  color: #000;
   font-family: 'Oswald', sans-serif;
   padding: 0px;
   font-size: 36px;
 }
-
-.header {
-  padding: 40px 0;
-}
-
-.header .thumbnail {
-  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
-  filter: alpha(opacity=50);
-  opacity: 0.5;
-  width: 100%;
-  background-color: #FFF;
-  overflow: hidden;
-}
-
-.header .thumbnail-relative {
-  position: relative;
-  max-width: 400px;
-  background-color: #000000;
-  max-height: 400px;
-  margin: 15px 5px;
-  text-align: center;
-}
-
-.header .thumbnail img {
-  max-width: 400px;
-  max-height: 400px;
-  width: 100%;
-}
-
-.header .thumbnail-link {
-  z-index: 83;
-  width: 240px;
-  border-style: solid;
-  border-width: 4px;
-  border-color: #FFFFFF;
-  background-color: rgba(211,175,28,0.7);
-  border-radius: 27px;
-  color: #FFF;
-  font-size: 26px;
-  letter-spacing: 1px;
-  text-decoration: none;
-  cursor: pointer;
-  text-align: left;
-  display: block;
-  position: absolute;
-  bottom: 25px;
-  margin: 0 85px;
-  font-weight: 600;
-  font-family: 'Montserrat', sans-serif;
-}
-
-.header .thumbnail-link:hover {
-  text-decoration: none;
-  color: #FFF;
-  background-color: rgba(211,175,28,0.9);
-  cursor: pointer;
-}
-
-.header .thumbnail-link p {
-  padding: 10px 15px 10px 40px;
-  margin: 0;
-  border-radius: 27px;
-  cursor: pointer;
-}
-
-.header .thumbnail-link img {
-  position: absolute;
-  right: 10px;
-  top: 5px;
-}
-
-.thumbnail-link > div {
-  position: relative;
-}
-
-.header .thumbnail-link h4 {
-  padding: 15px 15px 15px 30px;
-  margin: 0;
-  border-radius: 27px;
-  cursor: pointer;
-  font-family: 'Montserrat', sans-serif;
-  font-size: 20px;
-  font-weight: 600;
-}
-
-@media (max-width: 767px) {
-  .header .thumbnail-relative.md-auto {
-    margin: 15px auto;
-  }
-}
-
-@media (max-width: 575px) {
-  .header .thumbnail-relative.sm-auto {
-    margin: 15px auto;
-  }
-}
-
-.footer {
-  border-width: 0px;
-  background-color: #222222;
-  padding: 30px 0;
-}
-
-.footer .address {
-  max-width: 160px;
-  padding-right: 10px;
-  background-color: transparent;
-  color: #FFFFFF;
-  font-size: 13px;
-  line-height: 16px;
-  font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
-  float: left;
-}
-
-.footer .address span {
-  font-weight: bold;
-}
-
-.footer .footer-nav {
-  float: right;
-}
-
-.footer .footer-nav > li a {
-  text-decoration: none;
-  font-style: normal;
-  font-weight: normal;
-  padding: 10px 15px;
-  display: inline-block;
-  color: #FFFFFF;
-  text-align: center;
-  font-size: 12px;
-  line-height: 14px;
-  font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
-}
-
-.footer .footer-nav > li a:hover, .footer .footer-nav > li a.active {
-  background-color: #AA8A63;
-}
-
-.footer .overflow {
-  overflow: hidden;
-}
-
-.footer .copyrights {
-  height: 100%;
-  width: 100%;
-  font-size: 14px;
-  position: relative;
-  text-align: center;
-  color: #fbfbfb;
-}
-
-.copyrights p {
-  margin-bottom: 0;
-  position: absolute;
-  bottom: 10px;
-  color: #FFFFFF;
-  text-align: center;
-  font-size: 12px;
-  line-height: 14px;
-  font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
-}
-
-.footer .privacy-policy {
-  display: block;
-  text-align: right;
-  font-size: 12px;
-  line-height: 14px;
-  color: #FFFFFF;
-  text-decoration: none;
-  font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
-  position: absolute;
-  bottom: 0;
-  right: 0;
-}
-
-.footer .ready {
-  color: #555555;
-  height: 100%;
-  text-align: right;
-  position: relative;
-  font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
-}
-
-.footer .ready p {
-  font-size: 24px;
-  line-height: 34px;
-  text-align: right;
-}
-
-.footer .ready p strong {
-  font-size: 30px;
-  line-height: 42px;
-  font-weight: bold;
-}
-
-.footer .privacy-policy:hover {
-  text-decoration: none;
-  cursor: pointer;
-}
-
-.footer .row > div > div {
-  max-height: 181px;
-  overflow: hidden;
-  margin: 15px 0;
-}
-
-.footer .footer-content {
-  margin-top: 10px;
-}
-
-@media (max-width: 768px) {
-  .footer .address {
-    float: none;
-    margin: auto;
-    text-align: center;
-  }
-}
-
-@media (max-width: 761px) {
-  .footer .footer-nav {
-    float: none;
-    margin: auto;
-    text-align: center;
-    display: block !important;
-  }
-}
-
-@media (max-width: 761px) {
-  .footer .footer-nav > li {
-    display: inline-block !important;
-  }
-}
-
-.footer .row > div > div.map {
-  width: 320px;
-  height: 181px;
-}
-
-@media (min-width: 992px) {
-  .footer .row > div > div.map {
-    margin-left: 0 !important;
-  }
-}
-
-@media (max-width: 575px) {
-  .footer .row > div > div {
-    padding: 20px 10px;
-    text-align: center;
-    margin: auto;
-  }
-}
-
-@media (max-width: 575px) {
-  .copyrights p {
-    text-align: center !important;
-    margin: 0 auto;
-    width: 100%;
-  }
-}
-
-@media (max-width: 575px) {
-  .footer .privacy-policy {
-    left: inherit;
-    right: initial;
-    margin: 0 auto;
-    text-align: center;
-    width: 99%;
-  }
-}
-
-@media (max-width: 575px) {
-  .footer .ready p {
-    text-align: center;
-    width: 100%;
-  }
-}
-
-@media (max-width: 575px) {
-  .order-xs-13 {
-    order: 13 !important;
-  }
-}
-
-.info-section {
-  padding: 40px 0;
-}
-
-.info-section .upon-arrival {
-  padding-right: 30px;
-}
-
-.h3-black {
+.take-breath .h2{
   color: #2e2e2e;
   font-family: 'Montserrat', sans-serif;
-  font-size: 18px;
-  font-weight: 600;
-  padding: 0;
-  padding-bottom: 15px;
+  font-size: 24px;
+  text-align: left;
+  padding: 0px;
+  line-height: 29px;
 }
-
+.take-breath .body-text-dark{
+  color: #2e2e2e;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 16px;
+  padding: 0;
+  line-height: 19px;
+}
+.thank-you {
+    padding: 40px 0;
+}
+.thank-you p{
+  font-family: 'Montserrat', sans-serif;
+  color: #222;
+  font-size: 16px;
+  padding: 0;
+  line-height: 19px;
+}
+.thank-you-img {
+    width: 100%;
+    margin: 25px 0;
+    text-align: center;
+}
+.map{
+  height: 550px;
+  width: 100%;
+  min-height: 550px;
+}
